--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "dotenv-expand": "^5.1.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.3",
+    "vuetify": "^2.0.9",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
