--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@trevoreyre/autocomplete-vue": "^2.0.2",
     "core-js": "^2.6.5",
     "dotenv-expand": "^5.1.0",
     "register-service-worker": "^1.6.2",
